Add exposed headers and allow error endpoint